--- a/Untitled-3.ipynb
+++ b/Untitled-3.ipynb
@@ -2,109 +2,117 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import polars as pl\n"
+    "import pandas as pd "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "json_str=\"kafka-fastapi/response_1740050499335.json\""
+    "df=pd.read_csv(\"/root/main-kafka-main/DataFrame/4412d9e0-ab8c-11ec-bcd8-afb5f342d01b-20250224_153942.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'polar' has no attribute 'read_json'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mpl\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_json\u001b[49m(StringIO(json_str))\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'polar' has no attribute 'read_json'"
-     ]
-    }
-   ],
-   "source": [
-    "pl.read_json(StringIO(json_str))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "import polars as pl\n",
-    "\n",
-    "with open(\"kafka-fastapi/data.json\") as f:\n",
-    "    data = json.load(f)\n",
-    "\n",
-    "df = pl.DataFrame(data)\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div><style>\n",
-       ".dataframe > thead > tr,\n",
-       ".dataframe > tbody > tr {\n",
-       "  text-align: right;\n",
-       "  white-space: pre-wrap;\n",
-       "}\n",
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
        "</style>\n",
-       "<small>shape: (5, 17)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>id</th><th>createdTime</th><th>additionalInfo</th><th>tenantId</th><th>customerId</th><th>name</th><th>type</th><th>label</th><th>deviceProfileId</th><th>deviceData</th><th>firmwareId</th><th>softwareId</th><th>externalId</th><th>ownerName</th><th>groups</th><th>active</th><th>ownerId</th></tr><tr><td>struct[2]</td><td>i64</td><td>struct[3]</td><td>struct[2]</td><td>struct[2]</td><td>str</td><td>str</td><td>str</td><td>struct[2]</td><td>struct[2]</td><td>null</td><td>null</td><td>null</td><td>null</td><td>list[struct[2]]</td><td>bool</td><td>struct[2]</td></tr></thead><tbody><tr><td>{&quot;DEVICE&quot;,&quot;0c4b80a0-9b26-11ec-bcd8-afb5f342d01b&quot;}</td><td>1646334825898</td><td>null</td><td>{&quot;TENANT&quot;,&quot;df80bdc0-18be-11e9-b7c6-afc03ecb7b2a&quot;}</td><td>{&quot;CUSTOMER&quot;,&quot;4412d9e0-ab8c-11ec-bcd8-afb5f342d01b&quot;}</td><td>&quot;GKC-C4DD57B6A504&quot;</td><td>&quot;IntelliGateAIR&quot;</td><td>null</td><td>{&quot;DEVICE_PROFILE&quot;,&quot;a792d3a0-5cbb-11ec-9110-c758097501fa&quot;}</td><td>{{&quot;DEFAULT&quot;},{&quot;DEFAULT&quot;}}</td><td>null</td><td>null</td><td>null</td><td>null</td><td>[{{&quot;ENTITY_GROUP&quot;,&quot;3096fba0-d67d-11ec-9b9b-072109ec9a92&quot;},&quot;Fans&quot;}]</td><td>false</td><td>{&quot;CUSTOMER&quot;,&quot;4412d9e0-ab8c-11ec-bcd8-afb5f342d01b&quot;}</td></tr><tr><td>{&quot;DEVICE&quot;,&quot;0c5062a0-9b26-11ec-bcd8-afb5f342d01b&quot;}</td><td>1646334825930</td><td>{false,false,&quot;&quot;}</td><td>{&quot;TENANT&quot;,&quot;df80bdc0-18be-11e9-b7c6-afc03ecb7b2a&quot;}</td><td>{&quot;CUSTOMER&quot;,&quot;4412d9e0-ab8c-11ec-bcd8-afb5f342d01b&quot;}</td><td>&quot;GKC-C4DD57B6A504-003&quot;</td><td>&quot;Modbus V5.0 Fan&quot;</td><td>&quot;Exhaust2&quot;</td><td>{&quot;DEVICE_PROFILE&quot;,&quot;c0f576b0-e626-11eb-9908-490b30a63a7a&quot;}</td><td>{{&quot;DEFAULT&quot;},{&quot;DEFAULT&quot;}}</td><td>null</td><td>null</td><td>null</td><td>null</td><td>[{{&quot;ENTITY_GROUP&quot;,&quot;3096fba0-d67d-11ec-9b9b-072109ec9a92&quot;},&quot;Fans&quot;}]</td><td>false</td><td>{&quot;CUSTOMER&quot;,&quot;4412d9e0-ab8c-11ec-bcd8-afb5f342d01b&quot;}</td></tr><tr><td>{&quot;DEVICE&quot;,&quot;0c5544a0-9b26-11ec-bcd8-afb5f342d01b&quot;}</td><td>1646334825962</td><td>{false,false,&quot;&quot;}</td><td>{&quot;TENANT&quot;,&quot;df80bdc0-18be-11e9-b7c6-afc03ecb7b2a&quot;}</td><td>{&quot;CUSTOMER&quot;,&quot;4412d9e0-ab8c-11ec-bcd8-afb5f342d01b&quot;}</td><td>&quot;GKC-C4DD57B6A504-002&quot;</td><td>&quot;Modbus V6 Fan&quot;</td><td>&quot;Inlet2&quot;</td><td>{&quot;DEVICE_PROFILE&quot;,&quot;c0f66110-e626-11eb-9908-490b30a63a7a&quot;}</td><td>{{&quot;DEFAULT&quot;},{&quot;DEFAULT&quot;}}</td><td>null</td><td>null</td><td>null</td><td>null</td><td>[{{&quot;ENTITY_GROUP&quot;,&quot;3096fba0-d67d-11ec-9b9b-072109ec9a92&quot;},&quot;Fans&quot;}]</td><td>false</td><td>{&quot;CUSTOMER&quot;,&quot;4412d9e0-ab8c-11ec-bcd8-afb5f342d01b&quot;}</td></tr><tr><td>{&quot;DEVICE&quot;,&quot;6f0cc8d0-ab8d-11ec-bcd8-afb5f342d01b&quot;}</td><td>1648138448349</td><td>{false,false,&quot;&quot;}</td><td>{&quot;TENANT&quot;,&quot;df80bdc0-18be-11e9-b7c6-afc03ecb7b2a&quot;}</td><td>{&quot;CUSTOMER&quot;,&quot;4412d9e0-ab8c-11ec-bcd8-afb5f342d01b&quot;}</td><td>&quot;Test Device Daume&quot;</td><td>&quot;default&quot;</td><td>&quot;&quot;</td><td>{&quot;DEVICE_PROFILE&quot;,&quot;bff4a880-e626-11eb-9908-490b30a63a7a&quot;}</td><td>{{&quot;DEFAULT&quot;},{&quot;DEFAULT&quot;}}</td><td>null</td><td>null</td><td>null</td><td>null</td><td>[]</td><td>false</td><td>{&quot;CUSTOMER&quot;,&quot;4412d9e0-ab8c-11ec-bcd8-afb5f342d01b&quot;}</td></tr><tr><td>{&quot;DEVICE&quot;,&quot;806bb700-c175-11ec-bcd8-afb5f342d01b&quot;}</td><td>1650547095152</td><td>{false,false,&quot;&quot;}</td><td>{&quot;TENANT&quot;,&quot;df80bdc0-18be-11e9-b7c6-afc03ecb7b2a&quot;}</td><td>{&quot;CUSTOMER&quot;,&quot;4412d9e0-ab8c-11ec-bcd8-afb5f342d01b&quot;}</td><td>&quot;GKC-C4DD57B6A504-016&quot;</td><td>&quot;Thermokon&quot;</td><td>null</td><td>{&quot;DEVICE_PROFILE&quot;,&quot;d31258d0-c560-11ec-bcd8-afb5f342d01b&quot;}</td><td>{{&quot;DEFAULT&quot;},{&quot;DEFAULT&quot;}}</td><td>null</td><td>null</td><td>null</td><td>null</td><td>[{{&quot;ENTITY_GROUP&quot;,&quot;3096fba0-d67d-11ec-9b9b-072109ec9a92&quot;},&quot;Fans&quot;}]</td><td>false</td><td>{&quot;CUSTOMER&quot;,&quot;4412d9e0-ab8c-11ec-bcd8-afb5f342d01b&quot;}</td></tr></tbody></table></div>"
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>id</th>\n",
+       "      <th>type</th>\n",
+       "      <th>label</th>\n",
+       "      <th>customerId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GKC-A848FA86D8E4-002</td>\n",
+       "      <td>0571c980-270f-11ee-bc9b-1d7b9ef08863</td>\n",
+       "      <td>Modbus V6 Fan</td>\n",
+       "      <td>AB-08 Venti 4</td>\n",
+       "      <td>4412d9e0-ab8c-11ec-bcd8-afb5f342d01b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>GKC-A848FA87769C-021</td>\n",
+       "      <td>074033d0-92c7-11ef-bb66-09a77fdcecde</td>\n",
+       "      <td>Thermokon</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4412d9e0-ab8c-11ec-bcd8-afb5f342d01b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>GKC-A848FA86D8E4-003</td>\n",
+       "      <td>0c7067f0-270f-11ee-bc9b-1d7b9ef08863</td>\n",
+       "      <td>Modbus V6 Fan</td>\n",
+       "      <td>AB-08 Venti 3</td>\n",
+       "      <td>4412d9e0-ab8c-11ec-bcd8-afb5f342d01b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>GKC-A848FA870B50-013</td>\n",
+       "      <td>0d876b50-2711-11ee-927a-b9de331472ce</td>\n",
+       "      <td>Modbus V6 Fan</td>\n",
+       "      <td>ZU-10 Venti 1</td>\n",
+       "      <td>4412d9e0-ab8c-11ec-bcd8-afb5f342d01b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>GKC-A848FA86D8E4-004</td>\n",
+       "      <td>16a5ee70-270f-11ee-927a-b9de331472ce</td>\n",
+       "      <td>Modbus V6 Fan</td>\n",
+       "      <td>AB-08 Venti 2</td>\n",
+       "      <td>4412d9e0-ab8c-11ec-bcd8-afb5f342d01b</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
       ],
       "text/plain": [
-       "shape: (5, 17)\n",
-       "┌────────────┬────────────┬───────────┬───────────┬───┬───────────┬───────────┬────────┬───────────┐\n",
-       "│ id         ┆ createdTim ┆ additiona ┆ tenantId  ┆ … ┆ ownerName ┆ groups    ┆ active ┆ ownerId   │\n",
-       "│ ---        ┆ e          ┆ lInfo     ┆ ---       ┆   ┆ ---       ┆ ---       ┆ ---    ┆ ---       │\n",
-       "│ struct[2]  ┆ ---        ┆ ---       ┆ struct[2] ┆   ┆ null      ┆ list[stru ┆ bool   ┆ struct[2] │\n",
-       "│            ┆ i64        ┆ struct[3] ┆           ┆   ┆           ┆ ct[2]]    ┆        ┆           │\n",
-       "╞════════════╪════════════╪═══════════╪═══════════╪═══╪═══════════╪═══════════╪════════╪═══════════╡\n",
-       "│ {\"DEVICE\", ┆ 1646334825 ┆ null      ┆ {\"TENANT\" ┆ … ┆ null      ┆ [{{\"ENTIT ┆ false  ┆ {\"CUSTOME │\n",
-       "│ \"0c4b80a0- ┆ 898        ┆           ┆ ,\"df80bdc ┆   ┆           ┆ Y_GROUP\", ┆        ┆ R\",\"4412d │\n",
-       "│ 9b26-11ec- ┆            ┆           ┆ 0-18be-11 ┆   ┆           ┆ \"3096fba0 ┆        ┆ 9e0-ab8c- │\n",
-       "│ …          ┆            ┆           ┆ e9-…      ┆   ┆           ┆ -d6…      ┆        ┆ 11e…      │\n",
-       "│ {\"DEVICE\", ┆ 1646334825 ┆ {false,fa ┆ {\"TENANT\" ┆ … ┆ null      ┆ [{{\"ENTIT ┆ false  ┆ {\"CUSTOME │\n",
-       "│ \"0c5062a0- ┆ 930        ┆ lse,\"\"}   ┆ ,\"df80bdc ┆   ┆           ┆ Y_GROUP\", ┆        ┆ R\",\"4412d │\n",
-       "│ 9b26-11ec- ┆            ┆           ┆ 0-18be-11 ┆   ┆           ┆ \"3096fba0 ┆        ┆ 9e0-ab8c- │\n",
-       "│ …          ┆            ┆           ┆ e9-…      ┆   ┆           ┆ -d6…      ┆        ┆ 11e…      │\n",
-       "│ {\"DEVICE\", ┆ 1646334825 ┆ {false,fa ┆ {\"TENANT\" ┆ … ┆ null      ┆ [{{\"ENTIT ┆ false  ┆ {\"CUSTOME │\n",
-       "│ \"0c5544a0- ┆ 962        ┆ lse,\"\"}   ┆ ,\"df80bdc ┆   ┆           ┆ Y_GROUP\", ┆        ┆ R\",\"4412d │\n",
-       "│ 9b26-11ec- ┆            ┆           ┆ 0-18be-11 ┆   ┆           ┆ \"3096fba0 ┆        ┆ 9e0-ab8c- │\n",
-       "│ …          ┆            ┆           ┆ e9-…      ┆   ┆           ┆ -d6…      ┆        ┆ 11e…      │\n",
-       "│ {\"DEVICE\", ┆ 1648138448 ┆ {false,fa ┆ {\"TENANT\" ┆ … ┆ null      ┆ []        ┆ false  ┆ {\"CUSTOME │\n",
-       "│ \"6f0cc8d0- ┆ 349        ┆ lse,\"\"}   ┆ ,\"df80bdc ┆   ┆           ┆           ┆        ┆ R\",\"4412d │\n",
-       "│ ab8d-11ec- ┆            ┆           ┆ 0-18be-11 ┆   ┆           ┆           ┆        ┆ 9e0-ab8c- │\n",
-       "│ …          ┆            ┆           ┆ e9-…      ┆   ┆           ┆           ┆        ┆ 11e…      │\n",
-       "│ {\"DEVICE\", ┆ 1650547095 ┆ {false,fa ┆ {\"TENANT\" ┆ … ┆ null      ┆ [{{\"ENTIT ┆ false  ┆ {\"CUSTOME │\n",
-       "│ \"806bb700- ┆ 152        ┆ lse,\"\"}   ┆ ,\"df80bdc ┆   ┆           ┆ Y_GROUP\", ┆        ┆ R\",\"4412d │\n",
-       "│ c175-11ec- ┆            ┆           ┆ 0-18be-11 ┆   ┆           ┆ \"3096fba0 ┆        ┆ 9e0-ab8c- │\n",
-       "│ …          ┆            ┆           ┆ e9-…      ┆   ┆           ┆ -d6…      ┆        ┆ 11e…      │\n",
-       "└────────────┴────────────┴───────────┴───────────┴───┴───────────┴───────────┴────────┴───────────┘"
+       "                   name                                    id           type  \\\n",
+       "0  GKC-A848FA86D8E4-002  0571c980-270f-11ee-bc9b-1d7b9ef08863  Modbus V6 Fan   \n",
+       "1  GKC-A848FA87769C-021  074033d0-92c7-11ef-bb66-09a77fdcecde      Thermokon   \n",
+       "2  GKC-A848FA86D8E4-003  0c7067f0-270f-11ee-bc9b-1d7b9ef08863  Modbus V6 Fan   \n",
+       "3  GKC-A848FA870B50-013  0d876b50-2711-11ee-927a-b9de331472ce  Modbus V6 Fan   \n",
+       "4  GKC-A848FA86D8E4-004  16a5ee70-270f-11ee-927a-b9de331472ce  Modbus V6 Fan   \n",
+       "\n",
+       "           label                            customerId  \n",
+       "0  AB-08 Venti 4  4412d9e0-ab8c-11ec-bcd8-afb5f342d01b  \n",
+       "1            NaN  4412d9e0-ab8c-11ec-bcd8-afb5f342d01b  \n",
+       "2  AB-08 Venti 3  4412d9e0-ab8c-11ec-bcd8-afb5f342d01b  \n",
+       "3  ZU-10 Venti 1  4412d9e0-ab8c-11ec-bcd8-afb5f342d01b  \n",
+       "4  AB-08 Venti 2  4412d9e0-ab8c-11ec-bcd8-afb5f342d01b  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,130 +123,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'[{\"name\":\"GKC-C4DD57B6A504\",\"id\":\"0c4b80a0-9b26-11ec-bcd8-afb5f342d01b\",\"type\":\"IntelliGateAIR\",\"label\":null,\"customerId\":\"4412d9e0-ab8c-11ec-bcd8-afb5f342d01b\"},{\"name\":\"GKC-C4DD57B6A504-003\",\"id\":\"0c5062a0-9b26-11ec-bcd8-afb5f342d01b\",\"type\":\"Modbus V5.0 Fan\",\"label\":\"Exhaust2\",\"customerId\":\"4412d9e0-ab8c-11ec-bcd8-afb5f342d01b\"},{\"name\":\"GKC-C4DD57B6A504-002\",\"id\":\"0c5544a0-9b26-11ec-bcd8-afb5f342d01b\",\"type\":\"Modbus V6 Fan\",\"label\":\"Inlet2\",\"customerId\":\"4412d9e0-ab8c-11ec-bcd8-afb5f342d01b\"},{\"name\":\"Test Device Daume\",\"id\":\"6f0cc8d0-ab8d-11ec-bcd8-afb5f342d01b\",\"type\":\"default\",\"label\":\"\",\"customerId\":\"4412d9e0-ab8c-11ec-bcd8-afb5f342d01b\"},{\"name\":\"GKC-C4DD57B6A504-016\",\"id\":\"806bb700-c175-11ec-bcd8-afb5f342d01b\",\"type\":\"Thermokon\",\"label\":null,\"customerId\":\"4412d9e0-ab8c-11ec-bcd8-afb5f342d01b\"}]'"
+       "(65, 5)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "customerId\n",
+       "4412d9e0-ab8c-11ec-bcd8-afb5f342d01b    65\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"customerId\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(columns={\"name\", \"type\",  'label', \"customerId\"}, axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('Datasets/temp.csv',  header =False, index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import polars as pl\n",
-    "\n",
-    "# Read JSON directly into a Polars DataFrame\n",
-    "df = pl.DataFrame(data)\n",
-    "\n",
-    "# Extract nested fields using struct or JSON methods\n",
-    "df = df.with_columns(\n",
-    "    pl.col(\"id\").struct[\"id\"].alias(\"id\"),\n",
-    "    pl.col(\"customerId\").struct[\"id\"].alias(\"customerId\")\n",
-    ").select([\"name\", \"id\", \"type\", \"label\", \"customerId\"])\n",
-    "df.write_json()"
+    "df=pl.read_csv(\"/root/main-kafka-main/Datasets/temp.csv\", has_header=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/root'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import os\n",
-    "from dotenv import load_dotenv\n",
-    "\n",
-    "cwd = os.getcwd()\n",
-    "cwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/root/main-kafka-main\n"
+      "shape: (5,)\n",
+      "Series: 'column_1' [str]\n",
+      "[\n",
+      "\t\"0c4b80a0-9b26-11ec-bcd8-afb5f3…\n",
+      "\t\"0c5062a0-9b26-11ec-bcd8-afb5f3…\n",
+      "\t\"0c5544a0-9b26-11ec-bcd8-afb5f3…\n",
+      "\t\"6f0cc8d0-ab8d-11ec-bcd8-afb5f3…\n",
+      "\t\"806bb700-c175-11ec-bcd8-afb5f3…\n",
+      "]\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
-    "print(os.getcwd())  # Prints the current working directory\n"
+    "for i in df:\n",
+    "    print(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DATAFRAME_OUTPUT_PATH None\n"
+      "0c4b80a0-9b26-11ec-bcd8-afb5f342d01b\n",
+      "0c5062a0-9b26-11ec-bcd8-afb5f342d01b\n",
+      "0c5544a0-9b26-11ec-bcd8-afb5f342d01b\n",
+      "6f0cc8d0-ab8d-11ec-bcd8-afb5f342d01b\n",
+      "806bb700-c175-11ec-bcd8-afb5f342d01b\n"
      ]
     }
    ],
    "source": [
-    "from config import BASE_URL, DATAFRAME_OUTPUT_PATH\n",
-    "print(\"DATAFRAME_OUTPUT_PATH\", DATAFRAME_OUTPUT_PATH)"
+    "import csv\n",
+    "\n",
+    "with open('/root/main-kafka-main/Datasets/temp.csv', 'r') as file:\n",
+    "    reader = csv.reader(file)\n",
+    "    for row in reader:\n",
+    "        print(row[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://emea5.ebmpapstneo.io'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "BASE_URL"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/root/main-kafka-main\n"
+      "[['0c4b80a0-9b26-11ec-bcd8-afb5f342d01b'], ['0c5062a0-9b26-11ec-bcd8-afb5f342d01b'], ['0c5544a0-9b26-11ec-bcd8-afb5f342d01b'], ['6f0cc8d0-ab8d-11ec-bcd8-afb5f342d01b'], ['806bb700-c175-11ec-bcd8-afb5f342d01b']]\n"
      ]
     }
    ],
    "source": [
-    "from pathlib import Path\n",
-    "print(Path.cwd())  # Prints the current working directory\n"
+    "import csv\n",
+    "\n",
+    "with open('/root/main-kafka-main/Datasets/temp.csv') as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    data = list(reader)\n",
+    "\n",
+    "print(data)"
    ]
   }
  ],
