--- a/analyse-data.ipynb
+++ b/analyse-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,16 +14,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_from_old=pd.read_csv(\"/root/main-kafka-main/DataFrame/dbb81920-b07d-11ee-bd34-0f08d8686702-20250226_150737.csv\")"
+    "df_from_old=pd.read_csv(\"/root/main-kafka-main/DataFrame/fde0af30-d9d7-11ed-abe5-9faf6fe668dc-20250227_093609.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -58,77 +58,70 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3CE90E11861C-001</td>\n",
-       "      <td>05b66db0-b6f1-11ef-b931-9dad38df1d1f</td>\n",
-       "      <td>Modbus V6 Fan</td>\n",
-       "      <td>L3</td>\n",
-       "      <td>116c9fc0-b6fc-11ef-9681-df1aaf416822</td>\n",
-       "      <td>Saint-Gobain Sweden AB - Tullinge SE</td>\n",
+       "      <td>58BF25EA6390-002</td>\n",
+       "      <td>004a38c0-27db-11ef-9159-ed94d19c6787</td>\n",
+       "      <td>BRAVO</td>\n",
+       "      <td>Saica PM 2</td>\n",
+       "      <td>30832ed0-2d4d-11ef-ad50-41358614ad63</td>\n",
+       "      <td>Saica Pack -  UK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>349454032FD4-001</td>\n",
-       "      <td>05cff3a0-fe2a-11ee-9283-21d5388cd6ec</td>\n",
-       "      <td>Modbus V6 Fan</td>\n",
-       "      <td>Mangel</td>\n",
-       "      <td>67b9c220-009c-11ef-965a-19074c7a4b59</td>\n",
-       "      <td>Comforta AB - Arlandastad SE</td>\n",
+       "      <td>58BF25EA1554-012</td>\n",
+       "      <td>03284830-91e3-11ef-bb66-09a77fdcecde</td>\n",
+       "      <td>SEN5X</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>397eac60-1daf-11ef-9159-ed94d19c6787</td>\n",
+       "      <td>Zehnder Zensor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3CE90E11861C-002</td>\n",
-       "      <td>0c0bfae0-b6f1-11ef-9681-df1aaf416822</td>\n",
-       "      <td>BRAVO</td>\n",
-       "      <td>L3</td>\n",
-       "      <td>116c9fc0-b6fc-11ef-9681-df1aaf416822</td>\n",
-       "      <td>Saint-Gobain Sweden AB - Tullinge SE</td>\n",
+       "      <td>58BF25E9756C-010</td>\n",
+       "      <td>0697e0e0-b79d-11ef-9681-df1aaf416822</td>\n",
+       "      <td>SEN5X</td>\n",
+       "      <td>Cosanum 11</td>\n",
+       "      <td>8d8537a0-4675-11ee-bc70-33963a1aa4c6</td>\n",
+       "      <td>Cosanum - Zurich CH</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>58BF25E99EB0</td>\n",
-       "      <td>0fb689f0-f36d-11ee-b74a-9d551fd2f465</td>\n",
+       "      <td>5443B2E17B4C</td>\n",
+       "      <td>0aff1d00-f589-11ee-b74a-9d551fd2f465</td>\n",
        "      <td>IntelliGateLTE</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>116c9fc0-b6fc-11ef-9681-df1aaf416822</td>\n",
-       "      <td>Saint-Gobain Sweden AB - Tullinge SE</td>\n",
+       "      <td>8d8537a0-4675-11ee-bc70-33963a1aa4c6</td>\n",
+       "      <td>Cosanum - Zurich CH</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>C049EF21E00C</td>\n",
-       "      <td>11530c70-457c-11ed-9a85-43b5866161ae</td>\n",
-       "      <td>IntelliGateLTE</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>552b1e70-0eb6-11ee-8cd1-c12f6d511a50</td>\n",
-       "      <td>ASM Foods - Mjölby SE</td>\n",
+       "      <td>58BF25EBA0F0-004</td>\n",
+       "      <td>0b2bea80-7fcf-11ef-bb66-09a77fdcecde</td>\n",
+       "      <td>Premasgard_7000</td>\n",
+       "      <td>Cone</td>\n",
+       "      <td>fde0af30-d9d7-11ed-abe5-9faf6fe668dc</td>\n",
+       "      <td>Motala Hissar - R&amp;D</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               name                                    id            type  \\\n",
-       "0  3CE90E11861C-001  05b66db0-b6f1-11ef-b931-9dad38df1d1f   Modbus V6 Fan   \n",
-       "1  349454032FD4-001  05cff3a0-fe2a-11ee-9283-21d5388cd6ec   Modbus V6 Fan   \n",
-       "2  3CE90E11861C-002  0c0bfae0-b6f1-11ef-9681-df1aaf416822           BRAVO   \n",
-       "3      58BF25E99EB0  0fb689f0-f36d-11ee-b74a-9d551fd2f465  IntelliGateLTE   \n",
-       "4      C049EF21E00C  11530c70-457c-11ed-9a85-43b5866161ae  IntelliGateLTE   \n",
+       "               name                                    id             type  \\\n",
+       "0  58BF25EA6390-002  004a38c0-27db-11ef-9159-ed94d19c6787            BRAVO   \n",
+       "1  58BF25EA1554-012  03284830-91e3-11ef-bb66-09a77fdcecde            SEN5X   \n",
+       "2  58BF25E9756C-010  0697e0e0-b79d-11ef-9681-df1aaf416822            SEN5X   \n",
+       "3      5443B2E17B4C  0aff1d00-f589-11ee-b74a-9d551fd2f465   IntelliGateLTE   \n",
+       "4  58BF25EBA0F0-004  0b2bea80-7fcf-11ef-bb66-09a77fdcecde  Premasgard_7000   \n",
        "\n",
-       "    label                            customerId  \\\n",
-       "0      L3  116c9fc0-b6fc-11ef-9681-df1aaf416822   \n",
-       "1  Mangel  67b9c220-009c-11ef-965a-19074c7a4b59   \n",
-       "2      L3  116c9fc0-b6fc-11ef-9681-df1aaf416822   \n",
-       "3     NaN  116c9fc0-b6fc-11ef-9681-df1aaf416822   \n",
-       "4     NaN  552b1e70-0eb6-11ee-8cd1-c12f6d511a50   \n",
-       "\n",
-       "                           CustomerName  \n",
-       "0  Saint-Gobain Sweden AB - Tullinge SE  \n",
-       "1          Comforta AB - Arlandastad SE  \n",
-       "2  Saint-Gobain Sweden AB - Tullinge SE  \n",
-       "3  Saint-Gobain Sweden AB - Tullinge SE  \n",
-       "4                 ASM Foods - Mjölby SE  "
+       "        label                            customerId         CustomerName  \n",
+       "0  Saica PM 2  30832ed0-2d4d-11ef-ad50-41358614ad63     Saica Pack -  UK  \n",
+       "1         NaN  397eac60-1daf-11ef-9159-ed94d19c6787       Zehnder Zensor  \n",
+       "2  Cosanum 11  8d8537a0-4675-11ee-bc70-33963a1aa4c6  Cosanum - Zurich CH  \n",
+       "3         NaN  8d8537a0-4675-11ee-bc70-33963a1aa4c6  Cosanum - Zurich CH  \n",
+       "4        Cone  fde0af30-d9d7-11ed-abe5-9faf6fe668dc  Motala Hissar - R&D  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,25 +132,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "CustomerName\n",
-       "Saint-Gobain Sweden AB - Tullinge SE     15\n",
-       "ASM Foods - Mjölby SE                     9\n",
-       "H&M Lager - Borås SE                      8\n",
-       "Press Kogyo Sweden AB - Oskarshamn SE     6\n",
-       "Comforta AB - Arlandastad SE              4\n",
-       "BoKlok Byggsystem AB - Gullringen SE      3\n",
-       "Bring Parcel AB - Jönköping SE            3\n",
-       "Anora Sweden Plc - Kungsängen SE          3\n",
+       "Zehnder Group - PMO SE                         29\n",
+       "Scandinavian Cellulose Production - Tbro SE    18\n",
+       "Motala Hissar - R&D                            16\n",
+       "Alta                                           12\n",
+       "Zehnder Zensor                                 10\n",
+       "Cosanum - Zurich CH                             8\n",
+       "Saica Pack -  UK                                8\n",
+       "Project Clogging                                6\n",
+       "R&D Novelis                                     4\n",
+       "Oerlikon Balzter - Brügg CH                     2\n",
+       "epNeo - Dortmund DE                             2\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -177,13 +173,13 @@
        "name             0\n",
        "id               0\n",
        "type             0\n",
-       "label           17\n",
+       "label           29\n",
        "customerId       0\n",
        "CustomerName     0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -228,42 +224,71 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>349454032FD4-010</td>\n",
-       "      <td>b7d987d0-b709-11ef-b931-9dad38df1d1f</td>\n",
+       "      <th>1</th>\n",
+       "      <td>58BF25EA1554-012</td>\n",
+       "      <td>03284830-91e3-11ef-bb66-09a77fdcecde</td>\n",
        "      <td>SEN5X</td>\n",
-       "      <td>Mangel</td>\n",
-       "      <td>67b9c220-009c-11ef-965a-19074c7a4b59</td>\n",
-       "      <td>Comforta AB - Arlandastad SE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>397eac60-1daf-11ef-9159-ed94d19c6787</td>\n",
+       "      <td>Zehnder Zensor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>58BF25E86D7C-010</td>\n",
-       "      <td>d0de4aa0-e21e-11ef-9681-df1aaf416822</td>\n",
+       "      <th>2</th>\n",
+       "      <td>58BF25E9756C-010</td>\n",
+       "      <td>0697e0e0-b79d-11ef-9681-df1aaf416822</td>\n",
        "      <td>SEN5X</td>\n",
-       "      <td>2</td>\n",
-       "      <td>08eaf0a0-b313-11ef-9681-df1aaf416822</td>\n",
-       "      <td>Press Kogyo Sweden AB - Oskarshamn SE</td>\n",
+       "      <td>Cosanum 11</td>\n",
+       "      <td>8d8537a0-4675-11ee-bc70-33963a1aa4c6</td>\n",
+       "      <td>Cosanum - Zurich CH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>5443B2E17B4C-010</td>\n",
+       "      <td>20001700-b79d-11ef-9681-df1aaf416822</td>\n",
+       "      <td>SEN5X</td>\n",
+       "      <td>Cosanum 12</td>\n",
+       "      <td>8d8537a0-4675-11ee-bc70-33963a1aa4c6</td>\n",
+       "      <td>Cosanum - Zurich CH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>EC62604C580C-010</td>\n",
+       "      <td>38e79d50-506b-11ee-863a-01bce6d27c63</td>\n",
+       "      <td>SEN5X</td>\n",
+       "      <td>Cosanum 13</td>\n",
+       "      <td>8d8537a0-4675-11ee-bc70-33963a1aa4c6</td>\n",
+       "      <td>Cosanum - Zurich CH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>58BF25EA1554-010</td>\n",
+       "      <td>3dfd8810-910e-11ef-bb66-09a77fdcecde</td>\n",
+       "      <td>SEN5X</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>397eac60-1daf-11ef-9159-ed94d19c6787</td>\n",
+       "      <td>Zehnder Zensor</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                name                                    id   type   label  \\\n",
-       "29  349454032FD4-010  b7d987d0-b709-11ef-b931-9dad38df1d1f  SEN5X  Mangel   \n",
-       "34  58BF25E86D7C-010  d0de4aa0-e21e-11ef-9681-df1aaf416822  SEN5X       2   \n",
+       "                name                                    id   type       label  \\\n",
+       "1   58BF25EA1554-012  03284830-91e3-11ef-bb66-09a77fdcecde  SEN5X         NaN   \n",
+       "2   58BF25E9756C-010  0697e0e0-b79d-11ef-9681-df1aaf416822  SEN5X  Cosanum 11   \n",
+       "18  5443B2E17B4C-010  20001700-b79d-11ef-9681-df1aaf416822  SEN5X  Cosanum 12   \n",
+       "43  EC62604C580C-010  38e79d50-506b-11ee-863a-01bce6d27c63  SEN5X  Cosanum 13   \n",
+       "48  58BF25EA1554-010  3dfd8810-910e-11ef-bb66-09a77fdcecde  SEN5X         NaN   \n",
        "\n",
-       "                              customerId  \\\n",
-       "29  67b9c220-009c-11ef-965a-19074c7a4b59   \n",
-       "34  08eaf0a0-b313-11ef-9681-df1aaf416822   \n",
-       "\n",
-       "                             CustomerName  \n",
-       "29           Comforta AB - Arlandastad SE  \n",
-       "34  Press Kogyo Sweden AB - Oskarshamn SE  "
+       "                              customerId         CustomerName  \n",
+       "1   397eac60-1daf-11ef-9159-ed94d19c6787       Zehnder Zensor  \n",
+       "2   8d8537a0-4675-11ee-bc70-33963a1aa4c6  Cosanum - Zurich CH  \n",
+       "18  8d8537a0-4675-11ee-bc70-33963a1aa4c6  Cosanum - Zurich CH  \n",
+       "43  8d8537a0-4675-11ee-bc70-33963a1aa4c6  Cosanum - Zurich CH  \n",
+       "48  397eac60-1daf-11ef-9159-ed94d19c6787       Zehnder Zensor  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,6 +296,74 @@
    "source": [
     "SEN5X_df=df_from_old[df_from_old[\"type\"]==\"SEN5X\"]\n",
     "SEN5X_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>id</th>\n",
+       "      <th>type</th>\n",
+       "      <th>label</th>\n",
+       "      <th>customerId</th>\n",
+       "      <th>CustomerName</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>EC62604C5C80-100</td>\n",
+       "      <td>46f02db0-62a7-11ee-863a-01bce6d27c63</td>\n",
+       "      <td>SEN5X</td>\n",
+       "      <td>Oerlikon Particle Counter</td>\n",
+       "      <td>0dd51000-c039-11ee-9aac-8b87a7da80ca</td>\n",
+       "      <td>Oerlikon Balzter - Brügg CH</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                name                                    id   type  \\\n",
+       "50  EC62604C5C80-100  46f02db0-62a7-11ee-863a-01bce6d27c63  SEN5X   \n",
+       "\n",
+       "                        label                            customerId  \\\n",
+       "50  Oerlikon Particle Counter  0dd51000-c039-11ee-9aac-8b87a7da80ca   \n",
+       "\n",
+       "                   CustomerName  \n",
+       "50  Oerlikon Balzter - Brügg CH  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SEN5X_df[SEN5X_df[\"name\"]==\"EC62604C5C80-100\"]"
    ]
   },
   {
@@ -289,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1412,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1467,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1484,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1546,7 +1639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1555,11 +1648,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_final.to_csv('Datasets/temp.csv',  header =False, index=False)\n"
+    "SEN5X_df.to_csv('Datasets/temp.csv',  header =True, index=True)\n"
    ]
   },
   {
