--- a/analyse-data.ipynb
+++ b/analyse-data.ipynb
@@ -1657,10 +1657,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Device: {'id': 1}, Key: temp\n",
+      "Device: {'id': 2}, Key: humidity\n",
+      "Device: {'id': 3}, Key: pressure\n"
+     ]
+    }
+   ],
+   "source": [
+    "device_keys = [{\"id\": 1}, {\"id\": 2}, {\"id\": 3}]\n",
+    "keys_to_fetch = [\"temp\", \"humidity\", \"pressure\"]\n",
+    "\n",
+    "for device, key in zip(device_keys, keys_to_fetch):\n",
+    "    print(f\"Device: {device}, Key: {key}\")"
+   ]
   }
  ],
  "metadata": {
